--- a/assets/projects.html
+++ b/assets/projects.html
@@ -1,6 +1,7 @@
 ---
-layout: page
-title: Hi, I'm Desh
-subtitle: PhD student in Speech Recognition
+layout: default
+title: Projects
 use-site-title: true
 ---
+
+<p>Here are my blog posts in reverse chronological order:</p>
