--- a/assets/projects.html
+++ b/assets/projects.html
@@ -1,7 +1,14 @@
 ---
-layout: default
+layout: page
 title: Projects
-use-site-title: true
 ---
+<p>Here are my projects in reverse chronological order:</p>
 
-<p>Here are my blog posts in reverse chronological order:</p>
+<ul>
+  {% for post in site.posts %}
+    <li class="spaced">
+      <a href="{{ post.url }}">{{ post.title }}</a> {{ post.date | date_to_long_string }}
+    </li>
+  {% endfor %}
+</ul>
+
