--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ subtitle: This is where I will tell my friends way too much about me
 
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css" />
-    <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
+<!--     <link href="favicon.png" rel="shortcut icon" type="image/x-icon" /> -->
   </head>
   
   <body>
