--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ subtitle: Time waits for nobody
   <body>
     <div class="container">
       <div id="clock"></div>
-      <div id="bookmark-container"></div>
+<!--       <div id="bookmark-container"></div> -->
     </div>
 
-    <script src="clock/bookmarks.js"></script>
+<!--     <script src="clock/bookmarks.js"></script> -->
     <script>
       // Get current time and format
       function getTime() {
