--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ subtitle: Time waits for nobody
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" /> -->
 
     <title>Homepage</title>
     <link rel="stylesheet" href="clock/styles.css" />
