--- a/index.html
+++ b/index.html
@@ -4,52 +4,52 @@ title: Machine Learner
 subtitle: Time waits for nobody
 ---
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
 <!--     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" /> -->
 
-    <title>Homepage</title>
+<!--     <title>Homepage</title>
     <link rel="stylesheet" href="clock/styles.css" />
 <!--     <link href="favicon.png" rel="shortcut icon" type="image/x-icon" /> -->
-  </head>
+<!--   </head> -->
   
-  <body>
+<!--   <body>
     <div class="container">
-      <div id="clock"></div>
+      <div id="clock"></div> -->
 <!--       <div id="bookmark-container"></div> -->
-    </div>
+<!--     </div> -->
 
 <!--     <script src="clock/bookmarks.js"></script> -->
-    <script>
+<!--     <script> -->
       // Get current time and format
-      function getTime() {
-        let date = new Date(),
-          min = date.getMinutes(),
-          sec = date.getSeconds(),
-          hour = date.getHours();
-
-        return (
-          "" +
-          (hour < 10 ? "0" + hour : hour) +
-          ":" +
-          (min < 10 ? "0" + min : min) +
-          ":" +
-          (sec < 10 ? "0" + sec : sec)
-        );
-      }
+//       function getTime() {
+//         let date = new Date(),
+//           min = date.getMinutes(),
+//           sec = date.getSeconds(),
+//           hour = date.getHours(); -->
+ -->
+//         return (
+//           "" +
+//           (hour < 10 ? "0" + hour : hour) +
+//           ":" +
+//           (min < 10 ? "0" + min : min) +
+//           ":" +
+//           (sec < 10 ? "0" + sec : sec)
+//         );
+//       }
       
-      window.onload = () => {
-        // Set up the clock
-        document.getElementById("clock").innerHTML = getTime();
-        // Set clock interval to tick clock
-        setInterval(() => {
-          document.getElementById("clock").innerHTML = getTime();
-        }, 100);
-      };
+//       window.onload = () => {
+//         // Set up the clock
+//         document.getElementById("clock").innerHTML = getTime();
+//         // Set clock interval to tick clock
+//         setInterval(() => {
+//           document.getElementById("clock").innerHTML = getTime();
+//         }, 100);
+//       };
 
-    </script>
-  </body>
-</html>
+//     </script>
+//   </body>
+// </html>
